Fixing spacing, prepping final demo

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,11 @@ body {
 }
 
 .container {
-  margin: auto;
+  margin: 0;
+  width: 100vw;
+  left: 0;
+  right: 0;
+  padding: 0;
 }
 
 .floatingTab {
@@ -72,6 +76,7 @@ h1 {
  position: sticky;
  top: 0;
  z-index: 10;
+ margin: 0px;
 }
 
 h2 {
@@ -80,11 +85,23 @@ h2 {
  padding: 10px;
  width: 100%;
  position: sticky;
- top: 60px; /* Adjusted to prevent overlap with h1 */
+ top: 50px; /* Adjusted to prevent overlap with h1 */
  z-index: 9;
  font-style: italic;
 }
 
 .form-label {
 	font-weight: bold;
+}
+
+.settings-controls {
+	margin: 10px;
+}
+
+p, h3, h4, .card, .search-box {
+	margin: 10px;
+}
+
+.card-title, .card-text {
+	margin: 0px;
 }
